--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -98,7 +98,6 @@ a {
 }
 
 .header__buttons .btn__container:nth-child(2) {
-    margin-right: 45px;
     margin-left: 45px;
 }
 
@@ -1452,4 +1451,60 @@ span {
 
 .restart.active svg path{
     stroke: var(--correct);
+}
+
+.traffic__light{
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    transform: translate(-50%, -300px);
+    width: 80px;
+    height: 200px;
+    border-radius: 6px;
+    background: var(--contrast);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    padding: 15px 0;
+    transition: all .35s ease-out;
+    opacity: 0;
+    pointer-events: none;
+    user-select: none;
+}
+
+.traffic__light.active{
+    transform: translate(-50%, -15%);
+    opacity: 1;
+}
+
+.traffic__light .circle{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: rgba(0, 0, 0, 0.3);
+    position: relative;
+}
+
+.traffic__light .circle:after{
+    border-right: 5px solid rgba(255, 255, 255, 0.5);
+    border-radius: 100%;
+    content: ' ';
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    width: 30px;
+    height: 30px;
+}
+
+.traffic__light .circle.red.active{
+    background: #FE666F;
+}
+
+.traffic__light .circle.yellow.active{
+    background: #FFC357;
+}
+
+.traffic__light .circle.green.active{
+    background: #37BD73;
 }
